# ace-cmake-starter

./: .gitmodules  Readme.md  build_ace_tools.bat  build_ace_tools.sh
.github/workflows/: main-build.yml
game/: CMakeLists.txt
game/res/: inteleaved.pal
